minor nit-picking and new TODO items

--- a/.gitignore
+++ b/.gitignore
@@ -47,3 +47,4 @@ data/graph-and-mu-polygons.shp
 data/graph-and-mu-polygons.shx
 data/mu-polygons-graph-clusters.tif
 data/mu-polygons-graph-clusters.tif.aux.xml
+paper/soil-networks.log
