notes that went nowhere!

--- a/.gitignore
+++ b/.gitignore
@@ -48,3 +48,5 @@ data/graph-and-mu-polygons.shx
 data/mu-polygons-graph-clusters.tif
 data/mu-polygons-graph-clusters.tif.aux.xml
 paper/soil-networks.log
+
+network-paper-2020.Rproj
